all page markup

--- a/front/presentaton/index.html
+++ b/front/presentaton/index.html
@@ -110,16 +110,71 @@
                     </div>
                 </div>
             </div>
-            <div class="planet reloc"></div>
-            <div class="planet hr-supp"></div>
-            <div class="planet corporate"></div>
-            <div class="planet turnkey"></div>
-            <div class="planet it-recr"></div>
-            <div class="planet facilit"></div>
-            <div class="planet blockchain"></div>
-            <div class="planet accounting"></div>
+
+            <div class="planet reloc">
+                <div>
+                    <img src="img/planet/destination.png" alt="">
+                    <p>Relocation <br>support</p>
+                </div>
+            </div>
+            <div class="planet hr-supp">
+                <div>
+                    <img src="img/planet/business.png" alt="">
+                    <p>HR <br>consulting</p>
+                </div>
+            </div>
+            <div class="planet corporate">
+                <div>
+                    <img src="img/planet/cap.png" alt="">
+                    <p>Corporate <br> university</p>
+                </div>
+            </div>
+            <div class="planet turnkey">
+                <div>
+                    <img src="img/planet/team2.png" alt="">
+                    <p>Turnkey/teamkey <br> office</p>
+                </div>
+            </div>
+            <div class="planet it-recr">
+                <div>
+                    <img src="img/planet/recruitment.png" alt="">
+                    <p>IT-recruitment</p>
+                </div>
+            </div>
+            <div class="planet facilit">
+                <div>
+                    <img src="img/planet/team3.png" alt="">
+                    <p>Team<br>facilitation</p>
+                </div>
+            </div>
+            <div class="planet blockchain">
+                <div>
+                    <img src="img/planet/analysis.png" alt="">
+                    <p>Blockchain <br>consulting</p>
+                </div>
+            </div>
+            <div class="planet accounting">
+                <div>
+                    <img src="img/planet/accounting.png" alt="">
+                    <p>Accounting <br>support</p>
+                </div>
+            </div>
             <img src="img/logo-light.png" alt="">
         </div>
+    </div>
+</section>
+<section class="footer-p">
+    <div class="container">
+        <p>We <span>MARRY</span> Match your requirements
+        <br>Give us a shortcall to get personal request for quotation!</p>
+    </div>
+</section>
+<section class="footer">
+    <div class="container d-flex">
+        <p class="contact">Your personal contact:</p>
+        <a class="contact mail" href="mailto:meetus@try2myt.com">meetus@try2myt.com</a>
+        <p class="contact phone">+38067-218-21-70</p>
+        <a class="contact web" href="http://try2myt.com">www.try2myt.com</a>
     </div>
 </section>
 </body>
