complete html & css

--- a/front/presentaton/index.html
+++ b/front/presentaton/index.html
@@ -19,6 +19,10 @@
             </div>
             <div class="faces">
                 <img src="./img/faces.png" alt="">
+                <div class="square square1"></div>
+                <div class="square square2"></div>
+                <div class="square square3"></div>
+                <div class="square square4"></div>
             </div>
         </div>
     </div>
@@ -105,11 +109,26 @@
                 <div class="circle-2">
                     <div class="circle-3">
                         <div class="circle-4">
-
+                            <div class="circle-5"></div>
                         </div>
                     </div>
                 </div>
             </div>
+
+            <div class="sat sat1"></div>
+            <div class="sat sat2"></div>
+            <div class="sat sat3"></div>
+            <div class="sat sat4"></div>
+            <div class="sat sat5"></div>
+            <div class="sat sat6"></div>
+            <div class="sat sat7"></div>
+            <div class="sat sat8"></div>
+
+            <div class="sat sat-inner sat9"></div>
+            <div class="sat sat-inner sat10"></div>
+            <div class="sat sat-inner sat11"></div>
+            <div class="sat sat-inner sat12"></div>
+            <div class="sat sat-inner sat13"></div>
 
             <div class="planet reloc">
                 <div>
@@ -159,19 +178,19 @@
                     <p>Accounting <br>support</p>
                 </div>
             </div>
-            <img src="img/logo-light.png" alt="">
+            <img class="expertise-logo" src="img/logo-light.png" alt="">
         </div>
     </div>
 </section>
 <section class="footer-p">
     <div class="container">
         <p>We <span>MARRY</span> Match your requirements
-        <br>Give us a shortcall to get personal request for quotation!</p>
+            <br>Give us a shortcall to get personal request for quotation!</p>
     </div>
 </section>
 <section class="footer">
     <div class="container d-flex">
-        <p class="contact">Your personal contact:</p>
+        <p class="contact-header">Your personal contact:</p>
         <a class="contact mail" href="mailto:meetus@try2myt.com">meetus@try2myt.com</a>
         <p class="contact phone">+38067-218-21-70</p>
         <a class="contact web" href="http://try2myt.com">www.try2myt.com</a>
