--- a/front/presentaton/index.html
+++ b/front/presentaton/index.html
@@ -87,7 +87,7 @@
                 <p id="pref6-3">Pre-tech screening included</p>
             </div>
         </div>
-        <div class="d-flex">
+        <div class="d-flex" id="pref-middle">
             <div class="pref-left-col">
                 <h3>The best match</h3>
                 <h4>for hr & recruitment</h4>
@@ -107,8 +107,11 @@
 </section>
 
 <section class="cloud" id="cloud">
-    <div class="container">
-        <img src="img/cloud.png" alt="">
+    <div class="container container-arc">
+        <img src="img/cloud-arc.png" alt="" class="cloud-arc">
+    </div>
+    <div class="container container-cloud">
+        <img class="cloud-img" src="img/cloud2.png" alt="">
     </div>
 </section>
 <section class="expertise" id="expertise">
@@ -203,7 +206,7 @@
         <p class="contact-header">Your personal contact:</p>
         <a class="contact mail" href="mailto:meetus@try2myt.com">meetus@try2myt.com</a>
         <p class="contact phone">+38067-218-21-70</p>
-        <a class="contact web" href="http://try2myt.com/platform">www.try2myt.com/platform</a>
+        <a class="contact web" href="http://try2myt.com/platform">LINK TO OUR PLATFORM</a>
     </div>
 </section>
 
